# python_package_template

./: README.md  pyproject.toml
package_name/: main.py
test_package_tts/: hello_world.py
